--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -1,9 +1,9 @@
 name: Deploy deeplinks app
 on:
   push:
-    branches: [ deeplinks-21-menzorg ]
+    branches: [ main ]
   pull_request:
-    branches: [ deeplinks-21-menzorg ]
+    branches: [ main ]
   workflow_dispatch:
 defaults:
   run:
