--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.6'
 services:
   deeplinks-docker:
-    image: menzorg/deeplinks:deeplinks-21-menzorg
+    image: menzorg/deeplinks:main
     extra_hosts: ['host.docker.internal:host-gateway']
     ports:
       - 3006:3006
