--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "internal-ip": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
+    "prompt": "^1.2.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.4",
     "uniqid": "^5.3.0",
