--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "benchmark": "export HASURA_PATH=localhost:8080; export HASURA_SSL=0; export HASURA_SECRET=myadminsecretkey; DEBUG='materialized-path:*' ts-node benchmarks/index.ts",
     "migrate": "npx migrate up --compiler=ts:./compiler/index.js",
     "unmigrate": "npx migrate down --compiler=ts:./compiler/index.js",
-    "hasura-docker": "cross-env JWT_SECRET=\"{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}\" npm run hasura-docker-core",
-    "hasura-docker-core": "cd ./node_modules/@deep-foundation/hasura/local && docker-compose up -d",
-    "hasura-docker-stop": "cd ./node_modules/@deep-foundation/hasura/local && docker-compose down",
-    "start-docker": "cd local && docker-compose up -d",
-    "stop-docker": "cd local && docker-compose down"
+    "start-engine-docker": "cross-env JWT_SECRET=\"{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}\" npm run start-engine-docker-core",
+    "start-engine-docker-core": "cd ./node_modules/@deep-foundation/hasura/local && docker-compose up -d",
+    "stop-engine-docker": "cd ./node_modules/@deep-foundation/hasura/local && docker-compose down",
+    "start-deeplinks-docker": "cd local && docker-compose up -d",
+    "stop-deeplinks-docker": "cd local && docker-compose down"
   },
   "dependencies": {
     "@apollo/client": "^3.5.5",
