--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - 3006:3006
     restart: always
     environment:
-      MIGRATIONS_HASURA_PATH: '${MIGRATIONS_HASURA_PATH}'
-      MIGRATIONS_HASURA_SSL: '${MIGRATIONS_HASURA_SSL}'
-      MIGRATIONS_HASURA_SECRET: '${MIGRATIONS_HASURA_SECRET}'
+      DEEPLINKS_HASURA_PATH: '${DEEPLINKS_HASURA_PATH}'
+      DEEPLINKS_HASURA_SSL: '${DEEPLINKS_HASURA_SSL}'
+      DEEPLINKS_HASURA_SECRET: '${DEEPLINKS_HASURA_SECRET}'
       JWT_SECRET: '${JWT_SECRET}'
