--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "dotenv": "^8.2.0",
     "gists": "^2.0.0",
     "graphql": "^15.5.0",
+    "graphql-playground-middleware-express": "^1.7.23",
     "graphql-tag": "^2.11.0",
+    "http-proxy-middleware": "^2.0.1",
     "internal-ip": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
