--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "package:publish": "npm run package:build && npm publish --access public && npm run package:unbuild",
     "test": "export HASURA_PATH=localhost:8080; export HASURA_SSL=0; export HASURA_SECRET=myadminsecretkey; jest",
     "benchmark": "export HASURA_PATH=localhost:8080; export HASURA_SSL=0; export HASURA_SECRET=myadminsecretkey; ts-node benchmarks/index.ts",
-    "migrate": "npx migrate up --compiler=ts:./compiler/index.js -f $MIGRATIONS_DIR",
-    "unmigrate": "npx migrate down --compiler=ts:./compiler/index.js -f $MIGRATIONS_DIR",
+    "migrate": "npx migrate up --compiler=ts:./compiler/index.js",
+    "unmigrate": "npx migrate down --compiler=ts:./compiler/index.js",
     "start-engine-docker": "cross-env JWT_SECRET=\"{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}\" npm run start-engine-docker-core",
     "start-engine-docker-core": "cd ./node_modules/@deep-foundation/hasura/local && docker-compose up -d",
     "stop-engine-docker": "cd ./node_modules/@deep-foundation/hasura/local && docker-compose down",
