--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "migrate": "npx migrate up --compiler=ts:./compiler/index.js",
     "unmigrate": "npx migrate down --compiler=ts:./compiler/index.js",
     "start-engine-docker": "cross-env JWT_SECRET=\"{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}\" npm run start-engine-docker-core",
-    "start-engine-docker-core": "cd ./node_modules/@deep-foundation/hasura/local && docker-compose up -d",
-    "stop-engine-docker": "cd ./node_modules/@deep-foundation/hasura/local && docker-compose down",
+    "start-engine-docker-core": "cd ./node_modules/@deep-foundation/hasura/local && docker-compose --project-name deep up -d ",
+    "stop-engine-docker": "cd ./node_modules/@deep-foundation/hasura/local && docker-compose --project-name deep down",
     "start-deeplinks-docker": "cd local && docker-compose up -d",
     "stop-deeplinks-docker": "cd local && docker-compose down"
   },
