--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.6'
 services:
   deeplinks-docker:
     image: menzorg/deeplinks:main
+    networks:
+      - network
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
     extra_hosts: ['host.docker.internal:host-gateway']
@@ -13,5 +15,6 @@ services:
       DEEPLINKS_HASURA_SSL: '${DEEPLINKS_HASURA_SSL}'
       DEEPLINKS_HASURA_SECRET: '${DEEPLINKS_HASURA_SECRET}'
       JWT_SECRET: '${JWT_SECRET}'
-volumes:
-  docker_socket: '${SOCKET_PATH}'
+networks:
+  network:
+    driver: bridge
