--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
     "cross-env": "^7.0.3",
+    "debug": "^4.3.3",
     "dotenv": "^8.2.0",
+    "get-port": "^5.1.1",
     "gists": "^2.0.0",
     "graphql": "^15.5.0",
     "graphql-playground-middleware-express": "^1.7.23",
