--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -28,7 +28,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: menzorg/deeplinks
+          images: deepf/deeplinks
       - name: build docker image and push
         id: docker_build
         uses: docker/build-push-action@v2
