--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-foundation/deeplinks",
-  "version": "0.0.49",
+  "version": "0.0.50",
   "scripts": {
     "dev": "(cd local && docker-compose down || true) && cross-env npm_config_yes=true JWT_SECRET=\"{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}\" MIGRATIONS_HASURA_PATH=localhost:8080 MIGRATIONS_HASURA_SSL=0 MIGRATIONS_HASURA_SECRET=myadminsecretkey MIGRATIONS_DEEPLINKS_URL=http://host.docker.internal:3006 PORT=3006 npm run launch",
     "launch": "ts-node ./index.ts;",
@@ -43,6 +43,7 @@
     "http-proxy-middleware": "^2.0.1",
     "internal-ip": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
+    "microtime": "^3.0.0",
     "nodemon": "^2.0.15",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.4",
