--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.6'
 services:
   deeplinks:
-    image: menzorg/deeplinks:main
+    image: deepf/deeplinks:main
     networks:
       - network
     volumes:
