--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "microtime": "^3.0.0",
     "nodemon": "^2.0.15",
     "rimraf": "^3.0.2",
+    "supports-color": "^9.2.1",
     "ts-jest": "^26.5.4",
     "uniqid": "^5.3.0",
     "wait-on": "^6.0.0"
