--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     ports:
       - 3006:3006
     restart: always
+    pull_policy: always
     environment:
       DEEPLINKS_HASURA_PATH: '${DEEPLINKS_HASURA_PATH}'
       DEEPLINKS_HASURA_SSL: '${DEEPLINKS_HASURA_SSL}'
