--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -8,6 +8,12 @@ on:
 defaults:
   run:
     working-directory: ./
+env:
+  MIGRATIONS_ID_TYPE_SQL: bigint
+  MIGRATIONS_HASURA_PATH: localhost:8080
+  MIGRATIONS_HASURA_SSL: 0
+  MIGRATIONS_HASURA_SECRET: myadminsecretkey
+  MIGRATIONS_DEEPLINKS_URL: http://host.docker.internal:3006
 jobs:
   create-snapshot:
     name: create-snapshot
@@ -16,6 +22,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: docker test
         run: cd docker-prod/deep && docker-compose up -d
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '14.15'
+      - name: migrate
+        run: npm ci && npm run migrate
   dockerize:
     name: dockerize
     runs-on: ubuntu-latest
