--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -20,14 +20,16 @@ jobs:
     name: create-snapshot
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: docker test
-        run: cd docker-prod/deep && docker-compose up -d
-      - uses: actions/setup-node@v1
-        with:
-          node-version: '14.15'
-      - name: migrate
-        run: npm ci && npm run migrate
+      # - uses: actions/checkout@v2
+      # - name: docker init
+      #   run: cd docker-prod/deep && docker-compose up -d
+      # - uses: actions/setup-node@v1
+      #   with:
+      #     node-version: '14.15'
+      # - name: migrate
+      #   run: npm ci && npm run migrate
+      - name: backup
+        run: pg_dumpall --help
   dockerize:
     name: dockerize
     runs-on: ubuntu-latest
