--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -16,20 +16,6 @@ env:
   MIGRATIONS_DEEPLINKS_URL: http://host.docker.internal:3006
   JWT_SECRET: '{"type":"HS256","key":"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R"}'
 jobs:
-  create-snapshot:
-    name: create-snapshot
-    runs-on: ubuntu-latest
-    steps:
-      # - uses: actions/checkout@v2
-      # - name: docker init
-      #   run: cd docker-prod/deep && docker-compose up -d
-      # - uses: actions/setup-node@v1
-      #   with:
-      #     node-version: '14.15'
-      # - name: migrate
-      #   run: npm ci && npm run migrate
-      - name: backup
-        run: pg_dumpall --help
   dockerize:
     name: dockerize
     runs-on: ubuntu-latest
@@ -38,8 +24,16 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '14.15'
+      - name: ci
+        run: npm ci
+      - name: docker init
+        run: cd docker-prod/deep && docker-compose up -d
+      - name: migrate
+        run: npm run migrate
+      - name: backup migrated
+        run: pg_dumpall --clean --if-exists -d postgres://postgres:postgrespassword@127.0.0.1:5432/postgres > migrated_pg.dump
       - name: build
-        run: npm ci && npm run package:build
+        run: npm run package:build
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
