--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: migrate
         run: npm run migrate
       - name: backup migrated
-        run: pg_dumpall --clean --if-exists -d postgres://postgres:postgrespassword@127.0.0.1:5432/postgres > migrated_pg.dump
+        run: pg_dump --clean --if-exists -d postgres://postgres:postgrespassword@127.0.0.1:5432/postgres > migrated_pg.dump
       - name: build
         run: npm run package:build
       - name: Log in to Docker Hub
