--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -30,10 +30,12 @@ jobs:
         run: cd docker-prod/deep && docker-compose up -d
       - name: migrate
         run: npm run migrate
+      - name: backup dir
+        run: mkdir backup
       - name: backup pg
-        run: pg_dump --clean --if-exists -d postgres://postgres:postgrespassword@127.0.0.1:5432/postgres > migrated_pg.dump
+        run: pg_dump --clean --if-exists -d postgres://postgres:postgrespassword@127.0.0.1:5432/postgres > backup/migrated_pg.dump
       - name: backup volume
-        run: docker run --rm --volumes-from deep_postgres_1 -v $(pwd):/backup ubuntu tar cvf /backup/volume.tar /var/lib/postgresql/data
+        run: docker run --rm --volumes-from deep_postgres_1 -v $(pwd):/temp ubuntu tar cvf /temp/backup/volume.tar /var/lib/postgresql/data
       - name: build
         run: npm run package:build
       - name: Log in to Docker Hub
