--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cross-env": "^7.0.3",
     "debug": "^4.3.3",
     "dotenv": "^8.2.0",
+    "fix-path": "^3.0.0",
     "get-port": "^5.1.1",
     "gists": "^2.0.0",
     "graphql": "^15.5.0",
