--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "isolatedModules": true,
-    "declaration": true,
+    "declaration": true
   },
   "exclude": [
     "migrations"
