--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "graphql-tag": "^2.11.0",
     "http-proxy-middleware": "^2.0.1",
     "internal-ip": "^6.2.0",
+    "is-electron": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "microtime": "^3.0.0",
     "moesif-nodejs": "^3.1.19",
