--- a/.github/workflows/pg-build.yaml
+++ b/.github/workflows/pg-build.yaml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 defaults:
   run:
-    working-directory: ./postgresql
+    working-directory: ./
 jobs:
   build:
     name: dockerize
@@ -32,7 +32,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: ./postgresql
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
