--- a/postgresql/dockerfile
+++ b/postgresql/dockerfile
@@ -1,15 +1,39 @@
-FROM postgres:12 AS build
-RUN apt-get update \
-    && apt-get install -y git curl glib2.0 libc++-dev python python3-pip libv8-dev postgresql-server-dev-12
-RUN pip install pgxnclient
-RUN pgxn install plv8
-FROM postgres:12 AS final
-RUN apt-get update && apt-get install -y libc++-dev
+FROM postgres:12
 
-COPY --from=build /usr/share/postgresql/12/extension/plv8* /usr/share/postgresql/12/extension/
-COPY --from=build /usr/lib/postgresql/12/lib/plv8*.so /usr/lib/postgresql/12/lib/
-COPY --from=build /usr/lib/postgresql/12/lib/pgxs* /usr/lib/postgresql/12/lib/
-COPY --from=build /usr/lib/postgresql/12/bin/pg_config /usr/lib/postgresql/12/bin/pg_config
-RUN chmod -R 644 /usr/share/postgresql/12/extension/plv8* \
-    && chmod 755 /usr/lib/postgresql/12/lib/plv8*.so \
-    && chmod 755 /usr/lib/postgresql/12/bin/pg_config
+MAINTAINER Chia-liang Kao <clkao@clkao.org>
+
+ENV PLV8_VERSION=3.0.0 \
+    PLV8_SHASUM="1a96c559d98ad757e7494bf7301f0e6b0dd2eec6066ad76ed36cc13fec4f2390"
+
+RUN buildDependencies="build-essential \
+    ca-certificates \
+    curl \
+    git-core \
+    python \
+    gpp \
+    cpp \
+    pkg-config \
+    apt-transport-https \
+    cmake \
+    libc++-dev \
+    libc++abi-dev \
+    postgresql-server-dev-$PG_MAJOR" \
+  && runtimeDependencies="libc++1 \
+    libtinfo5 \
+    libc++abi1" \
+  && apt-get update \
+  && apt-get install -y --no-install-recommends ${buildDependencies} ${runtimeDependencies} \
+  && mkdir -p /tmp/build \
+  && curl -o /tmp/build/v$PLV8_VERSION.tar.gz -SL "https://github.com/plv8/plv8/archive/v${PLV8_VERSION}.tar.gz" \
+  && cd /tmp/build \
+  && echo $PLV8_SHASUM v$PLV8_VERSION.tar.gz | sha256sum -c \
+  && tar -xzf /tmp/build/v$PLV8_VERSION.tar.gz -C /tmp/build/ \
+  && cd /tmp/build/plv8-$PLV8_VERSION \
+  && make static \
+  && make install \
+  && strip /usr/lib/postgresql/${PG_MAJOR}/lib/plv8-${PLV8_VERSION}.so \
+  && rm -rf /root/.vpython_cipd_cache /root/.vpython-root \
+  && apt-get clean \
+  && apt-get remove -y ${buildDependencies} \
+  && apt-get autoremove -y \
+  && rm -rf /tmp/build /var/lib/apt/lists/*
