--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "apollo-server": "^2.21.0",
     "apollo-server-core": "^3.6.1",
     "apollo-server-express": "^3.5.0",
+    "atob": "^2.1.2",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
