--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: ci
         run: npm ci
       - name: docker init
-        run: cd local/actions/deep && docker-compose -p deep up -d
+        run: cd local/actions && docker-compose -p deep up -d
       - name: migrate
         run: npm run migrate
       - name: backup dir
