--- a/local/actions/docker-compose.yml
+++ b/local/actions/docker-compose.yml
@@ -73,6 +73,33 @@ services:
       - 'MINIO_ROOT_PASSWORD=miniosecretkey'
     entrypoint: sh
     command: '-c ''mkdir -p /export/default && /opt/bin/minio server --address 0.0.0.0:9000 --console-address 0.0.0.0:32765 /export'''
+  case:
+    image: deepf/deepcase:main
+    networks:
+      - network
+    ports:
+    - "3007:3007"
+    restart: always
+    pull_policy: always
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+    extra_hosts: ['host.docker.internal:host-gateway']
+  links:
+    image: deepf/deeplinks:main
+    networks:
+      - network
+    ports:
+    - "3006:3006"
+    restart: always
+    pull_policy: always
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+    extra_hosts: ['host.docker.internal:host-gateway']
+    environment:
+      - 'DEEPLINKS_HASURA_PATH=deep_graphql-engine_1:8080'
+      - 'DEEPLINKS_HASURA_SSL=0'
+      - 'DEEPLINKS_HASURA_SECRET=myadminsecretkey'
+      - 'JWT_SECRET={"type":"HS256","key":"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R"}'
 volumes:
   db_data:
   storage_rules:
