--- a/docker-prod/deep/docker-compose.yml
+++ b/docker-prod/deep/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 services:
   postgres:
+    container_name: deep-postgres
     image: deepf/pg12-plv8:deeplinks-70-menzorg
     networks:
       - network
@@ -9,14 +10,15 @@ services:
     restart: always
     command: postgres -c max_connections=200 -c log_error_verbosity=verbose -c client_min_messages=DEBUG5 -c log_min_messages=DEBUG5 -c log_min_error_statement=DEBUG5 -c log_duration=true
     volumes:
-    - db_data:/var/lib/postgresql/data
+    - db-data:/var/lib/postgresql/data
     environment:
       - 'POSTGRES_USER=postgres'
       - 'POSTGRES_PASSWORD=postgrespassword'
       - 'PGGSSENCMODE=disable'
       - 'PGSSLMODE=disable'
       - 'PGREQUIRESSL=0'
-  graphql-engine:
+  hasura:
+    container_name: deep-hasura
     image: hasura/graphql-engine:v2.3.1
     networks:
       - network
@@ -39,6 +41,7 @@ services:
       - 'HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS=true'
       - 'HASURA_GRAPHQL_UNAUTHORIZED_ROLE=link'
   case:
+    container_name: deep-case
     image: deepf/deepcase:dev
     networks:
       - network
@@ -50,6 +53,7 @@ services:
     - /var/run/docker.sock:/var/run/docker.sock
     extra_hosts: ['host.docker.internal:host-gateway']
   links:
+    container_name: deep-links
     image: deepf/deeplinks:dev
     networks:
       - network
@@ -61,12 +65,54 @@ services:
     - /var/run/docker.sock:/var/run/docker.sock
     extra_hosts: ['host.docker.internal:host-gateway']
     environment:
-      - 'DEEPLINKS_HASURA_PATH=deep_graphql-engine_1:8080'
+      - 'DEEPLINKS_HASURA_PATH=deep-hasura:8080'
       - 'DEEPLINKS_HASURA_SSL=0'
       - 'DEEPLINKS_HASURA_SECRET=myadminsecretkey'
       - 'JWT_SECRET={"type":"HS256","key":"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R"}'
+  storage:
+    container_name: deep-hasura-storage
+    image: nhost/hasura-storage:0.2.3
+    depends_on:
+      - hasura
+    restart: unless-stopped
+    ports:
+      - '8000:8000'
+    environment:
+      - 'DEBUG=true'
+      - 'HASURA_METADATA=1'
+      - 'HASURA_ENDPOINT=http://host.docker.internal:8080/v1'
+      - 'HASURA_GRAPHQL_ADMIN_SECRET=myadminsecretkey'
+      - 'S3_ENDPOINT=http://host.docker.internal:9000'
+      - 'S3_ACCESS_KEY=minioaccesskey'
+      - 'S3_SECRET_KEY=miniosecretkey'
+      - 'S3_BUCKET=default'
+      - 'S3_ROOT_FOLDER=default'
+      - 'POSTGRES_MIGRATIONS=0'
+      - 'POSTGRES_MIGRATIONS_SOURCE=postgres://postgres:postgrespassword@host.docker.internal:5432/postgres?sslmode=disable'
+    command: serve
+  minio:
+    container_name: deep-minio
+    image: minio/minio
+    restart: always
+    volumes:
+      - 'minio-data:/export'
+      - 'minio-config:/root/.minio'
+    ports:
+      - '9000:9000'
+      - '32765:32765'
+    environment:
+      - 'MINIO_ROOT_USER=minioaccesskey'
+      - 'MINIO_ROOT_PASSWORD=miniosecretkey'
+    entrypoint: sh
+    command: '-c ''mkdir -p /export/default && /opt/bin/minio server --address 0.0.0.0:9000 --console-address 0.0.0.0:32765 /export'''
 volumes:
-  db_data:
+  db-data:
+    name: deep-db-data
+  minio-data:
+    name: deep-minio-data
+  minio-config:
+    name: deep-minio-config
 networks:
   network:
+    name: deep-network
     driver: bridge
