--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -38,6 +38,14 @@ jobs:
         run: npm run migrate
       - name: snapshot:create
         run: 'npm run snapshot:create'
+      - name: docker-ver backup dir
+        run: mkdir backup
+      - name: docker-ver backup volume
+        run: docker run --rm --volumes-from deep_postgres_1 -v $(pwd):/temp ubuntu tar -c -v -C /var/lib/postgresql -f /temp/backup/volume.tar ./data
+      - name: docker-ver backup migrations log
+        run: cp .migrate backup/.migrate
+      - name: build
+        run: npm run package:build
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
