--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -32,6 +32,8 @@ jobs:
         run: npm ci
       - name: build
         run: npm run package:build
+      - name: docker-ver backup dir
+        run: mkdir backup
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -42,7 +44,7 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: deepf/deeplinks
-      - name: build docker image and push
+      - name: build docker image for 
         id: docker_build
         uses: docker/build-push-action@v2
         with:
@@ -58,8 +60,6 @@ jobs:
         run: npm run migrate
       - name: snapshot:create
         run: 'npm run snapshot:create'
-      - name: docker-ver backup dir
-        run: mkdir backup
       - name: docker-ver backup volume
         run: docker run --rm --volumes-from deep-postgres -v $(pwd):/temp ubuntu tar -c -v -C /var/lib/postgresql -f /temp/backup/volume.tar ./data
       - name: docker-ver backup migrations log
