--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "@deep-foundation/hasura": "0.0.19",
     "@deep-foundation/materialized-path": "^0.0.12",
     "@deep-foundation/react-hasura": "0.0.5",
-    "@deep-foundation/store": "0.0.7",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.17.34",
-    "@types/react": "^17.0.19",
+    "@deep-foundation/store": "^0.0.8",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
     "apollo-boost": "^0.4.9",
     "apollo-server": "^2.21.0",
     "apollo-server-core": "^3.6.1",
@@ -57,8 +56,6 @@
     "prompt": "^1.3.0",
     "rimraf": "^3.0.2",
     "supports-color": "^9.2.1",
-    "ts-jest": "^26.5.4",
-    "ts-node": "^10.9.1",
     "uniqid": "^5.3.0",
     "wait-on": "^6.0.0"
   },
@@ -69,7 +66,10 @@
     "node": "^14.15.0"
   },
   "devDependencies": {
-    "jest": "^26.6.3",
-    "typescript": "^4.4.3"
+    "@types/jest": "^29.2.4",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
