--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
-    "@deep-foundation/hasura": "0.0.19",
-    "@deep-foundation/materialized-path": "^0.0.13",
-    "@deep-foundation/react-hasura": "0.0.5",
-    "@deep-foundation/store": "^0.0.9",
+    "@capacitor/core": "^4.6.1",
+    "@deep-foundation/hasura": "^0.0.21",
+    "@deep-foundation/materialized-path": "^0.0.14",
+    "@deep-foundation/react-hasura": "^0.0.5",
+    "@deep-foundation/store": "^0.0.10",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "apollo-boost": "^0.4.9",
@@ -52,8 +53,11 @@
     "microtime": "^3.0.0",
     "moesif-nodejs": "^3.1.19",
     "multer": "^1.4.5-lts.1",
+    "next": "^13.1.1",
     "nodemon": "^2.0.15",
     "prompt": "^1.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
     "supports-color": "^9.2.1",
     "uniqid": "^5.3.0",
@@ -66,9 +70,9 @@
     "node": "^14.15.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.4",
+    "@types/jest": "^29.2.5",
     "jest": "^29.3.1",
-    "ts-jest": "^29.0.3",
+    "ts-jest": "^29.0.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
