--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "node": "^14.15.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
     "jest": "^29.3.1",
