--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
+    "@apollo/server": "^4.3.0",
     "@deep-foundation/hasura": "0.0.18",
     "@deep-foundation/materialized-path": "^0.0.11",
     "@deep-foundation/react-hasura": "0.0.5",
