--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "@types/react": "^17.0.19",
     "atob": "^2.1.2",
     "axios": "^0.24.0",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.1",
     "buffer": "^6.0.3",
     "chai": "^4.3.4",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "debug": "^4.3.3",
     "dotenv": "^8.2.0",
