--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
   },
   "dependencies": {
     "@apollo/client": "3.7.9",
-    "@deep-foundation/deepcase": "0.0.1",
+    "@deep-foundation/deepcase": "0.0.2",
     "@deep-foundation/hasura": "0.0.38",
     "@deep-foundation/materialized-path": "0.0.21",
-    "@deep-foundation/npm-packager": "0.0.20",
+    "@deep-foundation/npm-packager": "0.0.22",
     "@deep-foundation/react-hasura": "0.0.13",
     "@deep-foundation/store": "0.0.17",
+    "@deep-foundation/tsx": "0.0.2",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.18.37",
     "@types/react": "^17.0.53",
