npm install @deep-foundation/store@latest @deep-foundation/hasura@latest @deep-foundation/react-hasura@latest @deep-foundation/materialized-path@latest

--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
   "dependencies": {
     "@apollo/client": "3.7.9",
     "@deep-foundation/deepcase": "0.0.10",
-    "@deep-foundation/hasura": "0.0.38",
-    "@deep-foundation/materialized-path": "0.0.21",
+    "@deep-foundation/hasura": "^0.0.40",
+    "@deep-foundation/materialized-path": "^0.0.22",
     "@deep-foundation/npm-packager": "0.0.24",
     "@deep-foundation/npm-packager-ui": "0.0.8",
-    "@deep-foundation/react-hasura": "0.0.13",
-    "@deep-foundation/store": "0.0.17",
+    "@deep-foundation/react-hasura": "^0.0.14",
+    "@deep-foundation/store": "^0.0.18",
     "@deep-foundation/tsx": "0.0.2",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.18.37",
