--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "node": "^14.21.3"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
     "jest": "^26.6.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
