--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -18,8 +18,7 @@ services:
       JWT_SECRET: '${JWT_SECRET}'
       DEEPLINKS_HASURA_STORAGE_URL: '${DEEPLINKS_HASURA_STORAGE_URL}'
       MOESIF_TOKEN: '${MOESIF_TOKEN}'
-      PORT: '${PORT}'
-      DOCKER: true
+      DOCKER: 1
       DEEPLINKS_PUBLIC_URL: '${DEEPLINKS_PUBLIC_URL}'
       NEXT_PUBLIC_DEEPLINKS_SERVER: '${NEXT_PUBLIC_DEEPLINKS_SERVER}'
       GITPOD_GIT_USER_EMAIL: '${GITPOD_GIT_USER_EMAIL}'
@@ -34,6 +33,7 @@ services:
       MIGRATIONS_RL_TABLE: '${MIGRATIONS_RL_TABLE}'
       MIGRATIONS_DATE_TYPE_SQL: '${MIGRATIONS_DATE_TYPE_SQL}'
       DEFAULT_RL_CRON_SHEDULE: '${DEFAULT_RL_CRON_SHEDULE}'
+      PORT: '${DEEPLINKS_PORT}'
 networks:
   network:
     name: deep-network
