migrations support ES Modules

--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "bundle-jsonschema": "export LIBNAME=jsonschema;  node ./bundles/deeplinks-bundler-prepare.js && webpack && node ./bundles/deeplinks-bundler-postbundle.js",
     "bundle-jsonschema-test": "node ./bundles/jsonschema.js",
     "bundle-all": "npm run bundle-mathjs && npm run bundle-jsonschema && npm run bundle-jsonschema-test && npm run bundle-mathjs-test",
-    "package:build": "tsc --project tsconfig.json && (cd ./migrations && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts)",
+    "package:build": "tsc --project tsconfig.json",
     "package:unbuild": "rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && (cd ./migrations && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports/gql && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../..) && (cd ./benchmarks && rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts && cd ..) && (cd ./imports/router && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../..) && (cd ./tests && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../)",
     "package:publish": "npm run package:build && npm publish --access public && npm run package:unbuild",
     "test": "cross-env DEEPLINKS_HASURA_PATH=localhost:8080 DEEPLINKS_HASURA_SSL=0 DEEPLINKS_HASURA_SECRET=myadminsecretkey DOCKER_DEEPLINKS_URL=http://localhost:3006 jest --testTimeout=50000",
     "benchmark": "export DEEPLINKS_HASURA_PATH=localhost:8080; export DEEPLINKS_HASURA_SSL=0; export DEEPLINKS_HASURA_SECRET=myadminsecretkey; ts-node benchmarks/index.ts",
-    "migrate": "npx migrate up --compiler=ts:./compiler/index.cjs",
-    "unmigrate": "npx migrate down --compiler=ts:./compiler/index.cjs",
+    "migrate": "npm run package:build && cp migrations/*.js migrations-dist/ && npx migrate up --migrations-dir migrations-dist",
+    "unmigrate": "npm run package:build && cp migrations/*.js migrations-dist/ && npx migrate down --migrations-dir migrations-dist",
     "start-engine-docker": "cross-env JWT_SECRET=\"{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}\" HASURA_GRAPHQL_ENABLE_CONSOLE=true HASURA_GRAPHQL_DEV_MODE=true HASURA_GRAPHQL_LOG_LEVEL=debug HASURA_GRAPHQL_ENABLED_LOG_TYPES=\"startup, http-log, webhook-log, websocket-log, query-log\" HASURA_GRAPHQL_ADMIN_SECRET=myadminsecretkey HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS=true HASURA_GRAPHQL_UNAUTHORIZED_ROLE=undefined npm run start-engine-docker-core",
     "start-engine-docker-core": "cd ./node_modules/@deep-foundation/hasura && npm run docker",
     "stop-engine-docker": "cd ./node_modules/@deep-foundation/hasura/local && docker-compose --project-name deep down",
@@ -90,6 +90,7 @@
     "@testing-library/react": "^14.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "jest": "^29.5.0",
+    "migrate": "github:Konard/node-migrate",
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
